canvas visibility for modal fix for low gpu

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -65,7 +65,13 @@ html.no-scroll {
   nav.collapsible-menu {
     visibility: hidden;
   }
-  canvas{
+  canvas.particles-scatter{
+    visibility: hidden;
+  }
+}
+html.no-background-canvas {
+
+  canvas.particles-scatter{
     visibility: hidden;
   }
 }
